adds all update files for new site

--- a/new-site/commercial.html
+++ b/new-site/commercial.html
@@ -5,52 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script defer src="js/svg-with-js/js/fontawesome-all.js"></script>
-  <link rel="stylesheet" href="commercial.css">
+  <link rel="stylesheet" href="headshots1.css">
   <title>headshots</title>
 </head>
 <body>
   <div class="atf-wrapper">
-  <header id="top-header">
-    <figure id="logo"><a href="index.html"></a></figure>
-    <nav id="top-nav">
-      <ul>
-        <li><a href="headshots.html">Headshots</a></li>
-        <li><a href="workshops.html">Workshops</a></li>
-        <li><a href="live-events.html">Live Events</a></li>
-        <li><a href="commercial.html">Commercial</a></li>
-      </ul>
-    </nav>
-    <div id="top-admin-links">
-      <ul>
-        <li><i class="fal fa-envelope fa-2x"></i><a href="#">Newsletter</a></li>
-        <li><a href="#">Something</a></li>
-        <li><a href="#">&#x0260E;Something</a></li>
-        <li><a href="#"><i class="fal fa-at fa-2x"></i>Contact</a></li>
-      </ul>
-    </div>
-  </header>
+    <header id="top-header">
+      <figure id="logo"><a href="index.html"></a></figure>
+      <nav id="top-nav">
+        <ul>
+          <li><a href="headshots1.html">Headshots</a></li>
+          <li><a href="workshops.html">Workshops</a></li>
+          <li><a href="live-events.html">Event Organizer</a></li>
+          <li><a href="commercial.html">Commercial</a></li>
+        </ul>
+      </nav>
+      <div id="top-admin-links">
+        <!-- <ul>
+          <li><i class="fal fa-envelope fa-2x"></i><a href="#"></a></li>
+          <li><a href="#"><i class="fal fa-at fa-2x"></i></a></li>
+        </ul> -->
+      </div>
+    </header>
 
   <main>
-    <h1 class="main-title">Page Title Here</h1>
+    <h1 class="main-title">Professional Headshots</h1>
+    <h2>for professionals. by professionals.</h2>
     <section class="main-sec">
       <article class="main-article">
         <figure class="main-img"><img src="img/headshot-front-page.jpg" alt="article image wrap right example"><figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam magni laboriosam non asperiores.</figcaption></figure>
         <section>
           <p>We are a team of experienced, fashion industry professionals. We have many years’ experience invested in capturing the looks people want – film, music video, live venues.</p>
           <p>And, yes, we also provide headshots for professionals.</p>
-          <p>Yes, we are more expensive that what else is out there. But we aren’t competing with discount photographers. The differences in results are well worth it. And we couldn’t do it any other way.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus pariatur illo, dolorem commodi sint harum, veniam molestiae, eius dolore expedita fuga quis debitis mollitia, perspiciatis obcaecati ut maiores amet aut.</p>
-
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam illo, odio quia sed quasi tenetur dicta animi odit cupiditate veritatis modi neque iusto impedit, ex accusantium ipsa assumenda. Tempore, quae.</p>
+          <p>We are more expensive that what else is out there. But we aren’t competing with discount photographers. The differences in results are well worth it. And we couldn’t do it any other way.</p>
           <h3 class="subheader-h3">What makes a picture speak a thousands words?</h3>
           <p>The live quality. Freshness. The camera lens sees and records all, without judgement. Makeup and hairstyling, combined with effective lighting techniques, posing and angles are all essential to creating the look that is both real, and the one you want. It all doesn’t “just happen”.</p>
           <p>No professional goes in front of a camera without details like makeup and hair well under control. Neither should you.</p>
-        </section>
-        <section>
-        <aside class="aside-wrapper" id="aside-wrapper-01">
-          <section class="aside-sec" id="aside-sec-01">
+        <!-- </section>
+        <section> -->
+        <p>
+        <header>
+          <h3>image montage - before and after examples</h3>
+        </header>
+        <aside  id="aside-wrapper-01">
+          <section  id="aside-sec-01">
+
+            <figure></figure>
+            <figcaption>caption goes here</figcaption>
+            <a href="#">this is a link</a>
+          </section>
+          <section  id="aside-sec-02">
             <!-- <header>
               <h3>Related to workshop</h3>
             </header> -->
@@ -58,15 +62,7 @@
             <figcaption>caption goes here</figcaption>
             <a href="#">this is a link</a>
           </section>
-          <section class="aside-sec" id="aside-sec-02">
-            <!-- <header>
-              <h3>Related to workshop</h3>
-            </header> -->
-            <figure></figure>
-            <figcaption>caption goes here</figcaption>
-            <a href="#">this is a link</a>
-          </section>
-          <section class="aside-sec" id="aside-sec-03">
+          <section  id="aside-sec-03">
             <!-- <header>
               <h3>Related to workshop</h3>
             </header> -->
@@ -75,6 +71,7 @@
             <a href="#">this is a link</a>
           </section>
         </aside>
+        </p>
       </section>
         <section>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus tempora, magnam expedita corporis, reprehenderit commodi rerum dolor iure placeat quibusdam, odit repellendus, ut animi distinctio perspiciatis ea blanditiis eos perferendis!</p>
@@ -137,22 +134,27 @@
       <h2>Sidebar Header</h2>
     </header>
     <section class="left-sidebar-sec">
-      <p>This can contain universal highlights of information about your headshots services.</p>
+      <p>Yes, You Can…
+… go cheaper.
+
+<h3>Cheaper gets you…</h3>
+<p>… savings! For example, you could save  or more! Over one year, it amounts to saving 60 cents a day….</p>
+<p>
+… an inexpensive way to broadcast to total strangers that you…
+-	Prefer not to invest in your career (especially if you can save 60 cents a day!)
+-	Prefer to sacrifice quality, and will therefore likely do likewise to your clients
+-	Prefer to be mediocre, especially if you can save 60 cents a day!</p>
+
+<h3>Don’t Settle for Less </h3>
+<p>Lesser studios will lure you with low prices then upsell essentials like makeup or hairstyling services.
+Lesser studios offer low prices but cut costs by hiding inferior photoshoots with heavy photo-editing. Heavy editing erodes the naturalness and uniqueness of the image, leaving you with a boring, artificial look.
+</p>
       <p>It can contain bullet point lists that highlight and provide easy scannability for the visitor, so they are more likely to see it. Like this: (although the following list is not styled and would look different in production)</p>
       <ul class="left-sidebar-list">
         <li>stuff goes here</li>
         <li>can be a link</li>
         <li>stuff goes here</li>
         <li>can be a link</li>
-        <li>stuff goes here</li>
-        <li>stuff goes here</li>
-        <li>stuff goes here</li>
-      </ul>
-      <p>This sidebar can contain anything. It can also contain images, captions, paragraphers, headings, links and buttons.</p>
-      <ul class="left-sidebar-list">
-        <li>stuff goes here</li>
-        <li>can be a link</li>
-        <li>stuff goes here</li>
         <li>stuff goes here</li>
         <li>stuff goes here</li>
         <li>stuff goes here</li>
