--- a/new-site/headshots.html
+++ b/new-site/headshots.html
@@ -11,26 +11,23 @@
 </head>
 <body>
   <div class="atf-wrapper">
-  <header id="top-header">
-    <figure id="logo"><a href="index.html"></a></figure>
-    <nav id="top-nav">
-      <ul>
-        <li><a href="headshots.html">Headshots</a></li>
-        <li><a href="workshops.html">Workshops</a></li>
-        <li><a href="live-events.html">Live Events</a></li>
-        <li><a href="commercial.html">Commercial</a></li>
-      </ul>
-    </nav>
-    <!-- <div id="top-admin-links">
-      <ul>
-        <li><i class="fal fa-envelope fa-2x"></i><a href="#">Newsletter</a></li>
-        <li><a href="#">Something</a></li>
-        <li><a href="#">&#x0260E;Something</a></li>
-        <li><a href="#"><i class="fal fa-at fa-2x"></i>Contact</a></li>
-      </ul>
-    </div> -->
-  </header>
-  <main>
+    <header id="top-header">
+      <figure id="logo"><a href="index.html"></a></figure>
+      <nav id="top-nav">
+        <ul>
+          <li><a href="headshots.html">Headshots</a></li>
+          <li><a href="workshops.html">Workshops</a></li>
+          <li><a href="live-events.html">Event Organizer</a></li>
+          <li><a href="commercial.html">Commercial</a></li>
+        </ul>
+      </nav>
+      <div id="top-admin-links">
+        <!-- <ul>
+          <li><i class="fal fa-envelope fa-2x"></i><a href="#"></a></li>
+          <li><a href="#"><i class="fal fa-at fa-2x"></i></a></li>
+        </ul> -->
+      </div>
+    </header><main>
     <div class="left-sidebar">
       <header>
         <h2>Sidebar Header</h2>
