--- a/new-site/index.html
+++ b/new-site/index.html
@@ -5,30 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script defer src="js/svg-with-js/js/fontawesome-all.js"></script>
-  <link rel="stylesheet" href="mq-840-plus.css" media="(min-width:840px)">
+  <link rel="stylesheet" href="main.css">
   <title>Professional Headshots |  Fashion Photo Workshops - Masayo Laing</title>
 </head>
 <body>
   <div class="atf-wrapper">
-  <header id="top-header">
-    <figure id="logo"><a href="index.html"></a></figure>
-    <nav id="top-nav">
-      <ul>
-        <li><a href="headshots.html">Headshots</a></li>
-        <li><a href="workshops.html">Workshops</a></li>
-        <li><a href="live-events.html">Live Events</a></li>
-        <li><a href="commercial.html">Commercial</a></li>
-      </ul>
-    </nav>
-    <div id="top-admin-links">
-      <ul>
-        <li><i class="fal fa-envelope fa-2x"></i><a href="#">Newsletter</a></li>
-        <li><a href="#">Something</a></li>
-        <li><a href="#">&#x0260E;Something</a></li>
-        <li><a href="#"><i class="fal fa-at fa-2x"></i>Contact</a></li>
-      </ul>
-    </div>
-  </header>
+    <header id="top-header">
+      <figure id="logo"><a href="index.html"></a></figure>
+      <label id="menu-label"for="show-menu"><i class="fas fa-ellipsis-v fa-3x" ></i></label>
+      <input type="checkbox" id="show-menu">
+      <nav id="sidebar">
+        <ul>
+          <li><a href="headshots1.html">Professional Headshots and Personal Portraiture</a></li>
+          <li><a href="workshops1.html">Fashion Photography Workshops Toronto</a></li>
+          <li><a href="event-organizer.html">Event Organizer</a></li>
+          <li><a href="">04</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
   <svg viewbox="0 0 110 18">
     <path fill="#9EAFFD" opacity="0.3" d="M10 30 V15 Q30 3 60 15 V30z" border="2px"/>
     <path fill="rgba(255, 0, 0, 0.3)" d="M0 30 V12 Q30 17 55 12 T100 11 V30z" />
