adds headshots page update

--- a/new-site/headshots1.html
+++ b/new-site/headshots1.html
@@ -31,19 +31,20 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-  </header><main>
-    <header>
+  </header><main><header>
         <h1>Professional Headshots</h1>
-        <h2>& Personal Portraiture</h2>
-    </header>
-    <figure id="figure-00"></figure>
-    <!-- <h3>Four great reasons to choose us for&nbsp;personal&nbsp;portraiture and&nbsp;professional&nbsp;headshots:</h3> -->
-    <ul>
-      <li>One Hour in Studio</li>
-      <li>Makeup and Hairstyling Included</li>
-      <li>Minimal Photoshopping Required</li>
-      <li>No Hidden Fees ~ No Upselling</li>
-    </ul>
+        <h2>&&nbsp;Personal&nbsp;Portraiture</h2>
+        <!-- <figure></figure> -->
+      </header>
+      <ul class="fees">
+        <li><span class="dollar-sign">$</span><span class="dollars">300</span></li>
+        <li><span class="three">3</span> Unique Photos</li>
+        <li>No Hidden Fees ~ No Upselling</li>
+        <li><h3>Our Process Includes:</h3></li>
+        <li>One Hour in Studio</li>
+        <li>Makeup and Hairstyling Included</li>
+        <li>Post-Production Editing Included</li>
+      </ul>
       <section class="articles-container">
         <article>
           <header>
@@ -65,9 +66,8 @@
             <i class="far fa-question-circle fa-5x"></i>
           </section>
           <header>
-            <h2>Expert Styling Included</h2>
+            <h2>Makeup and Hairstyling Included</h2>
           </header>
-
             <section>
               <p>Ironically, the “natural look” looks anything but natural. Actual natural makeup is quickly “washed out” under studio lights. And more makeup is not necessarily the answer. What looks good stepping out of a salon will not likely translate well to digital.</p>
               <p>This is for a variety of reasons:</p>
@@ -78,16 +78,14 @@
                 </ul>
               <p>And hair quality is no different.</p>
               <figure id="figure-02"></figure>
-
               <p>For example, often a client wants to try different clothing styles before settling on a final look. Hair responds to static in the clothing material and quickly becomes frizzy. Without quick attention, the frizzies too are showing up in the final results.
               For these reasons, professional sets always maintain a dedicated makeup and hairstyling staff so that the work always appears fresh and clean.
               </p>
           </section>
         </article>
         <article>
-
           <header>
-            <h2>Minimal photoshopping</h2>
+            <h2>Post-Production Editing Included</h2>
           </header>
           <section class="discounters">
             <p><i class="fa fa-quote-left fa-3x fa-pull-left fa-border"></i>Doesn't Photoshop solve everything?</p>
@@ -127,6 +125,15 @@
     <header>
       <h3>Make Appointment</h3>
     </header>
+    <ul class="fees">
+      <li><span class="dollar-sign">$</span><span class="dollars">300</span></li>
+      <li><span class="three">3</span> Unique Photos</li>
+      <li>No Hidden Fees ~ No Upselling</li>
+      <li><h3>Our Process Includes:</h3></li>
+      <li>One Hour in Studio</li>
+      <li>Makeup and Hairstyling Included</li>
+      <li>Post-Production Editing Included</li>
+    </ul>
       <form action="/" method="post">
         <!-- <label for="fname">First Name: </label> -->
         <input type="text" id="fname" name="fname" title="enter your name" placeholder="first name"  autocomplete="off">
