adds updates to new site

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -12,14 +12,13 @@
   <div class="atf-wrapper">
     <header id="top-header">
       <figure id="logo"><a href="index.html"></a></figure>
-      <label id="menu-label"for="show-menu"><i class="fas fa-ellipsis-v fa-3x" ></i></label>
+      <label id="menu-label"for="show-menu"><i class="fas fa-ellipsis-v fa-2x"></i></label>
       <input type="checkbox" id="show-menu">
       <nav id="sidebar">
         <ul>
-          <li><a href="headshots1.html">Professional Headshots and Personal Portraiture</a></li>
-          <li><a href="workshops1.html">Fashion Photography Workshops Toronto</a></li>
+          <li><a href="headshots.html">Headshots</a></li>
+          <li><a href="workshops.html">Workshops</a></li>
           <li><a href="event-organizer.html">Event Organizer</a></li>
-          <li><a href="">04</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
