--- a/new-site/workshops.html
+++ b/new-site/workshops.html
@@ -4,156 +4,164 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="mq-840-plus.css" media="(min-width:840px)">
-  <link rel="stylesheet" href="workshops.css">
+  <link href="https://fonts.googleapis.com/css?family=Alice|Raleway:400" rel="stylesheet">
   <script defer src="js/svg-with-js/js/fontawesome-all.js"></script>
-  <title>workshop call to action</title>
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="mq-680-800.css" media="(min-width:680px)">
+  <link rel="stylesheet" href="mq-800-plus.css" media="(min-width:800px)">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <title>Fashion Photography Workshops</title>
 </head>
 <body>
-  <div class="atf-wrapper">
-    <header id="top-header">
-      <figure id="logo"><a href="index.html"></a></figure>
-      <nav id="top-nav">
-        <ul>
-          <li><a href="headshots.html">Headshots</a></li>
-          <li><a href="workshops.html">Workshops</a></li>
-          <li><a href="live-events.html">Live Events</a></li>
-          <li><a href="commercial.html">Commercial</a></li>
+  <header id="top-header">
+    <figure id="logo"><a href="index.html"></a></figure>
+    <label id="menu-label"for="show-menu"><i class="fas fa-ellipsis-v fa-2x"></i></label>
+    <input type="checkbox" id="show-menu">
+    <nav id="sidebar">
+      <ul>
+        <li><a href="headshots.html">Headshots</a></li>
+        <li><a href="workshops.html">Workshops</a></li>
+        <li><a href="event-organizer.html">Event Organizer</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main><header class="main-header">
+    <ul class="workshops-header-list">
+      <li><span>&bigstar;</span>&nbsp;over 120 fashion photography workshops</li>
+      <li><span>&bigstar;</span>&nbsp;over 300 model bookings</li>
+      <li><span>&bigstar;</span>&nbsp;over 100 photographers</li>
+      <li><span>&bigstar;</span>&nbsp;over 1000 portfolio images</li>
+    </ul>
+      <h1>Fashion Photography Workshops</h1>
+      <h2>Since 2013</h2>
 
-        </ul>
-      </nav>
-      <div id="top-admin-links">
-        <ul>
-          <li><i class="fal fa-envelope fa-2x"></i><a href="#">Newsletter</a></li>
-          <li><a href="#">Something</a></li>
-          <li><a href="#">&#x0260E;Something</a></li>
-          <li><a href="#"><i class="fal fa-at fa-2x"></i>Contact</a></li>
-        </ul>
-      </div>
     </header>
-  <main>
-    <div class="left-sidebar">
-      <header>
-        <h2>Sidebar Header</h2>
-      </header>
-      <section class="left-sidebar-sec">
-        <p>This can contain universal highlights of information about your headshots services.</p>
-        <p>It can contain bullet point lists that highlight and provide easy scannability for the visitor, so they are more likely to see it. Like this: (although the following list is not styled and would look different in production)</p>
-        <ul class="left-sidebar-list">
-          <li>stuff goes here</li>
-          <li>can be a link</li>
-          <li>stuff goes here</li>
-          <li>can be a link</li>
-          <li>stuff goes here</li>
-          <li>stuff goes here</li>
-          <li>stuff goes here</li>
-        </ul>
-        <p>This sidebar can contain anything. It can also contain images, captions, paragraphers, headings, links and buttons.</p>
-        <ul class="left-sidebar-list">
-          <li>stuff goes here</li>
-          <li>can be a link</li>
-          <li>stuff goes here</li>
-          <li>stuff goes here</li>
-          <li>stuff goes here</li>
-          <li>stuff goes here</li>
-        </ul>
-        <a class="left-sidebar-cta"href="#">call to action</a>
-      </section>
-    </div>
-      <div class="workshop-wrapper">
-        <section class="col-left">
-          <div id="pkg-container">
-              <figure id="img-wrk-ex-01"></figure>
-              <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              </figcaption>
-            <section id="img-examples">
-              <div class="img-example">
-                <figure>
-                  <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur ab ipsa tempore autem, recusandae explicabo numquam quae.</figcaption>
-                </figure>
-              </div>
-            </section>
+    <section class="articles-container">
+      <article>
+        <header>
+          <h2>Work With Professionals</h2>
+        </header>
+        <section>
+            <p>Many workshops work through agencies to produce models. I work with models individually and directly. Cutting out the middle man eliminates non-essential moving parts and ensures reliability.</p>
+            <figure></figure>
+            <p>Many workshops work through agencies to produce models. I work with models individually and directly. Cutting out the middle man eliminates non-essential moving parts and ensures reliability.</p>
         </section>
-        </div>
-
-    <div class="right-sidebar">
-      <header>
-        <h2>Sidebar Header</h2>
-      </header>
-      <section class="right-sidebar-sec">
-        <p>This can contain universal highlights of information about your headshots services.</p>
-        <p>It can contain bullet point lists that highlight and provide easy scannability for the visitor, so they are more likely to see it. Like this: (although the following list is not styled and would look different in production)</p>
-        <ul class="right-sidebar-list">
-          <li>stuff goes here</li>
-          <li>can be a link</li>
-          <li>stuff goes here</li>
-          <li>stuff goes here</li>
-          <li>can be a link</li>
-          <li>stuff goes here</li>
-        </ul>
-        <a href="#">this is a link</a>
-
-        <p>This sidebar can contain anything. It can also contain images, captions, paragraphers, headings, links and buttons.</p>
-        <ul class="right-sidebar-list">
-          <li>stuff goes here</li>
-          <li>stuff goes here</li>
-          <li>can be a link</li>
-          <li>stuff goes here</li>
-          <li>stuff goes here</li>
-          <li>can be a link</li>
-          <li>stuff goes here</li>
-        </ul>
-        <a href="#">this is a link</a>
-
-      </section>
-    </div>
-  </main>
-</div>
-  <aside class="aside-wrapper">
-    <section class="aside-sec" id="aside-sec-01">
-      <header>
-        <h3>Related to workshop</h3>
-
-      </header>
-      <figure></figure>
-      <figcaption>caption goes here</figcaption>
+        <section>
+          <figure></figure>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam porro sequi ea, earum odit, molestiae recusandae eligendi voluptates iure nulla soluta distinctio, velit ab ducimus fugiat sunt officiis architecto quod.</p>
+          <figure></figure>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam porro sequi ea, earum odit, molestiae recusandae eligendi voluptates iure nulla soluta distinctio, velit ab ducimus fugiat sunt officiis architecto quod.</p>
+          <figure></figure>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam porro sequi ea, earum odit, molestiae recusandae eligendi voluptates iure nulla soluta distinctio, velit ab ducimus fugiat sunt officiis architecto quod.</p>
+        </section>
+      </article>
+      <article>
+        <header>
+          <h2>Build Your Portfolio</h2>
+        </header>
+          <section>
+              <figure></figure>
+              <p>Many workshops work through agencies to produce models. I work with models individually and directly. Cutting out the middle man eliminates non-essential moving parts and ensures reliability.</p>
+              <figure></figure>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam porro sequi ea, earum odit, molestiae recusandae eligendi voluptates iure nulla soluta distinctio, velit ab ducimus fugiat sunt officiis architecto quod.</p>
+          </section>
+          <section>
+              <figure>LINK: NICHE PAGE</figure>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam porro sequi ea, earum odit, molestiae recusandae eligendi voluptates iure nulla soluta distinctio, velit ab ducimus fugiat sunt officiis architecto quod.</p>
+              <figure>LINK: PAST WORKSHOPS EXAMPLES</figure>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam porro sequi ea, earum odit, molestiae recusandae eligendi voluptates iure nulla soluta distinctio, velit ab ducimus fugiat sunt officiis architecto quod.</p>
+              <figure>LINK: SAMPLE GALLERY</figure>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam porro sequi ea, earum odit, molestiae recusandae eligendi voluptates iure nulla soluta distinctio, velit ab ducimus fugiat sunt officiis architecto quod.</p>
+              <figure>LINK: BEHIND THE SCENES</figure>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam porro sequi ea, earum odit, molestiae recusandae eligendi voluptates iure nulla soluta distinctio, velit ab ducimus fugiat sunt officiis architecto quod.</p>
+          </section>
+        </article>
+        <article>
+          <header>
+            <h2>Our Next Event</h2>
+          </header>
+            <section>
+                <figure></figure>
+                <p>Many workshops work through agencies to produce models. I work with models individually and directly. Cutting out the middle man eliminates non-essential moving parts and ensures reliability.</p>
+              <ul>
+                <li>Location: Join our mailing list for all details</li>
+              </ul>
+            </section>
+          </article>
+        </section>
+      </main>
+<section class="form-container">
+  <section class="cta-sec">
+    <h3>Book Your Workshop</h3>
+    <header>
+      <p>Plan on attending the next workshop. Make your reservation early since they can sell out quite quickly!</p>
       <ul>
-        <li>some highlights</li>
-        <li>some highlights</li>
+        <li>fill out the information below</li>
+        <li>I will be in contact to confirm details</li>
         <li>some highlights</li>
         <li>some highlights</li>
       </ul>
-      <a href="#">this is a link</a>
+    </header>
+    <section class="form">
+      <form action="/" method="post">
+        <input type="text" id="fname" name="fname" title="enter your name" placeholder="first name"  autocomplete="off">
+        <input type="text" id="lname" name="lname" title="enter your name" placeholder="last name"  autocomplete="off">
+        <input type="text" id="coname" name="coname" title="enter your name" placeholder="company name"  autocomplete="off">
+        <input type="email" id="email-addr" name="email-addr" title="enter your email address" placeholder="first name"  autocomplete="off">
+        <button class="cta-button" name="cta-button">Free Consultation</button>
+      </form>
     </section>
-    <section class="aside-sec" id="aside-sec-02">
-      <header>
-        <h3>Related to workshop</h3>
-      </header>
-      <figure></figure>
-      <figcaption>caption goes here</figcaption>
-      <ul>
-        <li>some highlights</li>
-        <li>some highlights</li>
-        <li>some highlights</li>
-        <li>some highlights</li>
-      </ul>
-      <a href="#">this is a link</a>
+  </section>
+  <section class="cta-sec" id="cta-sec-02">
+    <h3>Workshop Reservations MultiPak</h3>
+    <header>
+    <ul>
+      <li>some highlights</li>
+      <li>some highlights</li>
+      <li>some highlights</li>
+      <li>some highlights</li>
+    </ul>
+  </header>
+    <section class="form">
+      <form action="/" method="post">
+        <input type="text" id="fname" name="fname" title="enter your name" placeholder="first name"  autocomplete="off">
+        <input type="text" id="lname" name="lname" title="enter your name" placeholder="last name"  autocomplete="off">
+        <input type="text" id="coname" name="coname" title="enter your name" placeholder="company name"  autocomplete="off">
+        <input type="email" id="email-addr" name="email-addr" title="enter your email address" placeholder="first name"  autocomplete="off">
+        <button class="cta-button" name="cta-button">Free Consultation</button>
+      </form>
     </section>
-    <section class="aside-sec" id="aside-sec-03">
-      <header>
-        <h3>Related to workshop</h3>
-      </header>
-      <figure></figure>
-      <figcaption>caption goes here</figcaption>
-      <ul>
-        <li>some highlights</li>
-        <li>some highlights</li>
-        <li>some highlights</li>
-        <li>some highlights</li>
-      </ul>
-      <a href="#">this is a link</a>
+  </section>
+  <section class="cta-sec">
+    <h3>Attend Next Workshop Event</h3>
+    <header>
+    <figure></figure>
+    <figcaption>caption goes here</figcaption>
+    <p>Plan on attending the next workshop. Make your reservation early since they can sell out quite quickly.</p>
+    <ul>
+      <li>some highlights</li>
+      <li>some highlights</li>
+      <li>some highlights</li>
+      <li>some highlights</li>
+    </ul>
+  </header>
+    <section class="form">
+      <form action="/" method="post">
+        <input type="text" id="fname" name="fname" title="enter your name" placeholder="first name"  autocomplete="off">
+        <input type="text" id="lname" name="lname" title="enter your name" placeholder="last name"  autocomplete="off">
+        <input type="text" id="coname" name="coname" title="enter your name" placeholder="company name"  autocomplete="off">
+        <input type="email" id="email-addr" name="email-addr" title="enter your email address" placeholder="first name"  autocomplete="off">
+        <button class="cta-button" name="cta-button">Free Consultation</button>
+      </form>
     </section>
-  </aside>
-</div>
+  </section>
+</section>
+  <footer>
+    <ul>
+      <li><span>&#10003;</span>&nbsp; exciting opportunities to develop your profession or serious hobby skills.</li>
+      <li><span>&#10003;</span>&nbsp; to commit to an experience that is dependable, professional and original.</li>
+    </ul>
+  </footer>
 </body>
 </html>
