--- a/new-site/dev/index.html
+++ b/new-site/dev/index.html
@@ -37,7 +37,7 @@ class=<!DOCTYPE html>
     <section class="idx-headshots-wrapper">
       <a href="headshots.html">
         <h1>Headshots</h1>
-        <figure><img src="../img/headshots/7EABE981.png" alt="RAW team picture"></figure>
+        <figure><img src="../img/headshots/7EABE981.png" alt="teenaged female portrait"></figure>
         <section>
           <p class="idx-headshots-copy">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam reprehenderit assumenda explicabo magnam ratione, quibusdam temporibus minima! Explicabo velit laboriosam, ex omnis quis ipsam ab perspiciatis aliquid ipsum, temporibus illum?
           <span>Learn more...</span>
