--- a/new-site/dev/workshops.html
+++ b/new-site/dev/workshops.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="mq-680-800.css" media="(min-width:680px)">
   <link rel="stylesheet" href="mq-800-plus.css" media="(min-width:800px)">
-  <script defer src="js/svg-with-js/js/fontawesome-all.js" async></script>
+  <script defer src="../js/svg-with-js/js/fontawesome-all.js" async></script>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -19,15 +19,14 @@
   <title>Fashion Photography Workshops</title>
 </head>
 <body>
-  <header id="top-header">
-    <figure id="logo"><a href="index.html"></a></figure>
-    <label id="menu-label"for="show-menu"><i class="fas fa-ellipsis-v fa-2x"></i></label>
+  <header class="top-header">
+    <figure class="logo"><a href="index.html"></a></figure>
+    <label id="menu-label"for="show-menu">&vellip;</label>
     <input type="checkbox" id="show-menu">
     <nav id="sidebar">
       <ul>
         <li><a href="headshots.html">Headshots</a></li>
         <li><a href="workshops.html">Workshops</a></li>
-        <!-- <li><a href="event-organizer.html">Event Organizer</a></li> -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -44,13 +43,13 @@
     </header>
     <section class="articles-container">
       <article>
-        <figure id="workshops-figure-01"></figure>
+        <figure class="workshops-figure"><img src="../img/workshops/" alt=""></figure>
         <header>
-          <h2>Work With Professionals</h2>
+          <h2>Develop Your Skills</h2>
         </header>
         <section>
           <p>My workshops allow you to work on your craft in a professional and creative environment. The photographers are available to offer pointers on camera use and suggestions to help you make the most of your window of opportunity with the model.</p>
-          <figure id="workshops-figure-02"></figure>
+          <figure class="workshops-figure"><img src="../img/workshops/" alt=""></figure>
           <h3>Ample Time Guaranteed</h3>
           <ul>
             <li><span>&bigstar;</span>&nbsp;7 openings per workshop</li>
@@ -66,7 +65,7 @@
           </div>
         </section>
         <section>
-          <figure id="workshops-figure-01"></figure>
+          <figure class="workshops-figure"><img src="../img/workshops/" alt=""></figure>
           <h3>Friendly and Helpful Professionals</h3>
           <ul>
             <li><span>&bigstar;</span>&nbsp;All levels of experience welcomed and encouraged</li>
@@ -77,7 +76,7 @@
           <p>My photographers are professional and friendly. No one will try to impose upon you any particular method. Expect to be encouraged to explore your own ideas and techniques.</p>
           <h3>Gain experience directing models</h3>
           <p>I work with models directly and look for those offering the complete package: photogeneity and variety, intelligence and focus and reliability. As a photographer, you will find my models will contribute enormously to the success of your photoshoot experience.</p>
-          <figure id="workshops-figure-01"></figure>
+          <figure class="workshops-figure"><img src="../img/workshops/" alt=""></figure>
           <h3>Variety of Locations</h3>
           <p>I like to keep the settings for workshops fresh and interesting, and use alternate venues, including:</p>
           <ul>
@@ -86,17 +85,17 @@
             <li><span>&bigstar;</span>&nbsp;Private Residences</li>
           </ul>
           <p>Our studios always have modern, state-of-the-art facilities, including professional lighting and variety in backdrops.</p>
-          <figure id="workshops-figure-01"></figure>
+          <figure class="workshops-figure"><img src="../img/workshops/" alt=""></figure>
           <p>During summer months we take advantage of the good weather as much as possible. Toronto has many street and park locations that add extra flavour to your photo sessions.</p>
-          <figure id="workshops-figure-01"></figure>
+          <figure class="workshops-figure"><img src="../img/workshops/" alt=""></figure>
           <p>Unique settings such as private residences provide photoshoots with a truly authentic feel.</p>
-          <figure id="workshops-figure-01"></figure>
+          <figure class="workshops-figure"><img src="../img/workshops/" alt=""></figure>
           <div class="fig-montage-3">
             <img src="img/headshots/asian-couple-young-female-portrait.svg" alt="">
             <img src="img/headshots/asian-couple-young-female-portrait.svg" alt="">
             <img src="img/headshots/asian-couple-young-female-portrait.svg" alt="">
           </div>
-          <figure id="workshops-figure-01"></figure>
+          <figure class="workshops-figure"><img src="../img/workshops/" alt=""></figure>
         </section>
       </article>
       <article>
@@ -104,7 +103,7 @@
           <h2>Build Your Portfolio</h2>
         </header>
           <section>
-              <figure id="workshops-figure-01"></figure>
+              <figure class="workshops-figure"><img src="../img/workshops/" alt=""></figure>
               <h3>Unique photo opportunities</h3>
               <p>My makeup and creative niche is in traditional Japanese makeup and stylings. Specifically, geisha. Your portfolio will quickly capture attention with unique photo opportunities.</p>
               <div class="fig-montage-3">
@@ -140,7 +139,7 @@
         </section>
       </main>
 <section class="form-container">
-  <section class="cta-sec">
+  <section class="call-to-action-sec">
     <h3>Book Your Workshop</h3>
     <header>
       <p>Plan on attending the next workshop. Make your reservation early since they can sell out quite quickly!</p>
@@ -157,11 +156,11 @@
         <input type="text" id="lname" name="lname" title="enter your name" placeholder="last name"  autocomplete="off">
         <input type="text" id="coname" name="coname" title="enter your name" placeholder="company name"  autocomplete="off">
         <input type="email" id="email-addr" name="email-addr" title="enter your email address" placeholder="first name"  autocomplete="off">
-        <button class="cta-button" name="cta-button">Free Consultation</button>
+        <button class="call-to-action-button" name="call-to-action-button">Free Consultation</button>
       </form>
     </section>
   </section>
-  <section class="cta-sec" id="cta-sec-02">
+  <section class="call-to-action-sec" id="call-to-action-sec-02">
     <h3>Workshop Reservations MultiPak</h3>
     <header>
     <ul>
@@ -177,11 +176,11 @@
         <input type="text" id="lname" name="lname" title="enter your name" placeholder="last name"  autocomplete="off">
         <input type="text" id="coname" name="coname" title="enter your name" placeholder="company name"  autocomplete="off">
         <input type="email" id="email-addr" name="email-addr" title="enter your email address" placeholder="first name"  autocomplete="off">
-        <button class="cta-button" name="cta-button">Free Consultation</button>
+        <button class="call-to-action-button" name="call-to-action-button">Free Consultation</button>
       </form>
     </section>
   </section>
-  <section class="cta-sec">
+  <section class="call-to-action-sec">
     <h3>Attend Next Workshop Event</h3>
     <header>
     <figure></figure>
@@ -200,7 +199,7 @@
         <input type="text" id="lname" name="lname" title="enter your name" placeholder="last name"  autocomplete="off">
         <input type="text" id="coname" name="coname" title="enter your name" placeholder="company name"  autocomplete="off">
         <input type="email" id="email-addr" name="email-addr" title="enter your email address" placeholder="first name"  autocomplete="off">
-        <button class="cta-button" name="cta-button">Free Consultation</button>
+        <button class="call-to-action-button" name="call-to-action-button">Free Consultation</button>
       </form>
     </section>
   </section>
