--- a/new-site/dev/headshots.html
+++ b/new-site/dev/headshots.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="main.css">
   <link rel="stylesheet" href="mq-680-800.css" media="(min-width:680px)">
   <link rel="stylesheet" href="mq-800-plus.css" media="(min-width:800px)">
-  <script defer src="js/svg-with-js/js/fontawesome-all.js"></script>
+  <script defer src="../js/svg-with-js/js/fontawesome-all.js"></script>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -19,15 +19,14 @@
   <title>Professional Headshots</title>
 </head>
 <body>
-  <header id="top-header">
-    <figure id="logo"><a href="index.html"></a></figure>
-    <label id="menu-label"for="show-menu"><i class="fas fa-ellipsis-v fa-2x"></i></label>
+  <header class="top-header">
+    <figure class="logo"><a href="index.html"></a></figure>
+    <label id="menu-label"for="show-menu">&vellip;</label>
     <input type="checkbox" id="show-menu">
     <nav id="sidebar">
       <ul>
         <li><a href="headshots.html">Headshots</a></li>
         <li><a href="workshops.html">Workshops</a></li>
-        <!-- <li><a href="event-organizer.html">Event Organizer</a></li> -->
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -55,43 +54,43 @@
               <p>Sitting under studio lights in front of a camera can be stressful for many. If unattended to, the camera will capture that stress and spoil the look you want.</p>
               <p>Portraiture photography is not solely about operating a camera. Even if you are inexperienced with photo-shooting, our photographers will help you relax enough to explore your photogenic side.</p>
               <p>Before long, you will feel confident and creative. The photographer will continue to coach your through the studio process as you explore various poses, camera angles and expressions to find the look you want.</p>
-              <figure id="headshots-figure-01"></figure>
+              <figure class="headshots-figure"><img src="../img/headshots/" alt=""></figure>
           </section>
         </article>
         <article>
           <header>
-            <h2>Makeup and Hairstyling </h2>
+            <h2>Makeup & Hairstyling </h2>
           </header>
             <section>
               <p>No professional set or studio is without a qualified makeup and styling crew.</p>
               <h3>Photo-shooting is a dynamic process</h3>
-              <figure id="headshots-figure-04"></figure>
+              <figure class="headshots-figure"><img src="../img/headshots/" alt=""></figure>
               <p>Photoshoots are constantly in motion. The makeup you started with will constantly need touch ups to keep it fresh and in place.</p>
               <p>And often, clients want to try different outfits. Wardrobe changes create static and make even normal hair frizzy.</p>
               <p>Our dedicated makeup and hairstyling team frees you from attend to these critical details.</p>
-              <figure id="headshots-figure-01"></figure>
+              <figure class="headshots-figure"><img src="../img/headshots/" alt=""></figure>
               <p>Another benefit is less need for post-production image editing (Photoshopping-out frizzy hair ends and blotchy makeup) which means you get your photos faster.</p>
-              <figure id="headshots-figure-03"></figure>
+              <figure class="headshots-figure"><img src="../img/headshots/" alt=""></figure>
               <h3>It’s about the camera and you</h3>
               <p>Studio makeup is applied for only one reason: to capture the look you want on camera.</p>
               <p>Daily, natural makeup is quickly washed out under studio lights. And more makeup is not automatically better.</p>
               <p>Therefore, getting your makeup done in a salon before the photoshoot is neither beneficial nor necessary.</p>
               <h3>Everyone is different</h3>
               <p>We all have different types of hair and skin. Our makeup and styling team works with male and female, lighter and darker skin tones and various completions.</p>
-              <figure id="headshots-figure-02"></figure>
+              <figure class="headshots-figure"><img src="../img/headshots/" alt=""></figure>
           </section>
         </article>
         <article>
           <header>
-            <h2>Post-Production Editing </h2>
+            <h2>Editing</h2>
           </header>
           <section>
-            <figure id="headshots-figure-05"></figure>
+            <figure class="headshots-figure"><img src="../img/headshots/" alt=""></figure>
             <h3>Save Time</h3>
             <p>Excellent post-production editing skills are rare. They are also time-consuming, adding to your photo’s turn-around time. Our process ensures we capture many details before they are photographed. This means less need for editing and you get your photos quicker.</p>
             <h3>Better Quality</h3>
             <p>Also, too much Photoshopping begins to erode the natural, fresh look that comes to life in studio, leaving a cleaner but duller, artificial appearance. Our process, by eliminating much need for photo-editing, ensures your photos remain natural and clean.</p>
-            <figure id="headshots-figure-06"></figure>
+            <figure class="headshots-figure"><img src="../img/headshots/" alt=""></figure>
           </section>
         </article>
     </section>
